Massive rewrite, replacing a lot of code entirely, and remaining Qt5 changes
This is the big one.  Replaced the board/game foundation with entirely new
code, and finished the port to Qt5.

Too many changes to list, but some of the major ones:
 - New board and game tree code, replacing matrix, tree, move, stonehandler
   and a few other things
 - The visual board now has one central function to synchronize its appearance
   with the abstract board
 - Removed pointless indirections like boardhandler and interfacehandler
 - Edit mode changed to be less confusing and more useful
 - New feature to select rectangular areas for image/ASCII export
 - New feature to number moves from a given position
 - ASCII export now produces lifein19x19/SL diagrams, including move numbers
   using the previous feature
 - GTP support that works with Leela Zero (and Gnugo)

--- a/src/normaltools_gui.ui
+++ b/src/normaltools_gui.ui
@@ -27,7 +27,7 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="Q3GroupBox" name="whiteFrame">
+    <widget class="QGroupBox" name="whiteFrame">
      <property name="sizePolicy">
       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
        <horstretch>0</horstretch>
@@ -92,7 +92,7 @@ Click on
     </widget>
    </item>
    <item>
-    <widget class="Q3GroupBox" name="blackFrame">
+    <widget class="QGroupBox" name="blackFrame">
      <property name="sizePolicy">
       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
        <horstretch>0</horstretch>
@@ -351,14 +351,6 @@ byo-yomi: e.g. Byo: 7x30s, 7 periods at 30 seconds; if a stone is placed within 
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
- <customwidgets>
-  <customwidget>
-   <class>Q3GroupBox</class>
-   <extends>QGroupBox</extends>
-   <header>Qt3Support/Q3GroupBox</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
